ELASTIC SEARCH REMOVED